Fix iOS spacing

--- a/src/components/Summary/MoodLogCard.css
+++ b/src/components/Summary/MoodLogCard.css
@@ -64,7 +64,7 @@
     z-index: 2000;
 }
 
-.flickity-fullscreen-button.flickity-fullscreen-button-exit {
+div.flickity-enabled.is-fullscreen > button.flickity-button {
     top: max(env(safe-area-inset-top), 10px);
 }
 
